Deploying modified components

--- a/force-app/main/default/classes/myMetricsController.cls
+++ b/force-app/main/default/classes/myMetricsController.cls
@@ -96,15 +96,18 @@ public without sharing class myMetricsController {
                 }
 
                 qw.allowCopy = true;
+
                 if (prevQuarterGoals.size() > 0) {
                     qw.allowCopy = true;
+                }else {
+                    qw.allowCopy = false;
                 }
+                
                 //smaske :[UAT_066]: [12-July-2024] : Disabling copy prev btn , when kra is completed or In Review and also for old kra
-                if(gl.Status__c == 'KRA Inreview' || gl.Status__c == 'KRA Completed' || gl.Status__c == 'HR KRA Completed' || gl.Status__c == 'Missed' || gl.Quarter_Start_Date__c < currentFiscalQuarter.StartDate  ){
+                if(gl.Status__c == 'KRA Inreview' || gl.Status__c == 'KRA Completed' || gl.Status__c == 'HR KRA Completed' || gl.Status__c == 'Missed' || gl.Quarter_Start_Date__c < currentFiscalQuarter.StartDate   ){
                     qw.allowCopy = false;
                 }
 
-                
 
                 //smaske : [UAT_066] : [15-July-2024] : passing Mentee/Mentor Submitted var values to disable button based on tabs
                 qw.menteeSubmitted = gl.Mentee_KRA_submitted__c;
