--- a/force-app/main/default/classes/quarterlyKRAViewCtrl.cls
+++ b/force-app/main/default/classes/quarterlyKRAViewCtrl.cls
@@ -186,6 +186,7 @@ public without sharing class quarterlyKRAViewCtrl {
             }else if (RRR.Resource_Reports_To__c == con.Id) {
                 //smaske :[10-July-2024] : Updatng Mentor_KRA_submitted__c checkbox to TRUE when mentor submits his all answer records
                 kraRecord.Mentor_KRA_submitted__c	= true;
+                kraRecord.Status__c = STATUS_KRA_INREVIEW; //smaske : Setting status to "KRA Inreview" when mentor submits his PM ANSWERS 
             }
 
             Update kraRecord;
